--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,189 @@
-h1 {
-  color: green;
-  font-size: 12px;
-  font-family: Arial, Helvetica, sans-serif; }
+@font-face {
+  font-family: "PTSans";
+  src: url("fonts/PTSans-Regular.ttf") format("opentype"); }
+
+@font-face {
+  font-family: "PlayfairDisplay";
+  src: url("fonts/PlayfairDisplay-VariableFont_wght.ttf") format("opentype"); }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+body {
+  font-family: "PTSans", sans-serif;
+  font-size: 16px;
+  background-color: #000000;
+  color: #ffffff; }
+
+.container {
+  border: 2px solid aquamarine; }
+
+.row {
+  border: 2px solid plum; }
+
+[class^="col"] {
+  border: 2px solid brown; }
+
+.main-img__col {
+  background-image: url(img/img_1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000000;
+  background-position: center top;
+  height: 50rem; }
+  .main-img__col .main-img__logo-img {
+    width: 12rem;
+    height: auto; }
+  .main-img__col .main-img__logo-description {
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #ffffff;
+    text-align: center;
+    margin: 10rem 30% 0 30%; }
+  @media (max-width: 991.98px) {
+    .main-img__col .main-img__logo-description {
+      margin: 5rem 5% 0 5%; } }
+
+.collection__container {
+  font-family: 'PlayfairDisplay', serif; }
+
+.collection__new-collection__col {
+  padding: 0 0 0 5rem;
+  min-height: 45rem; }
+
+.collection__new-collection__img {
+  background-image: url(img/img_2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000000;
+  background-position: left top;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  padding-bottom: 6rem; }
+
+@media (max-width: 1199.98px) {
+  .collection__new-collection__col {
+    padding: 0; } }
+
+.collection__new-collection__header {
+  font-size: 2.25rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 3rem;
+  text-transform: uppercase;
+  color: #ffffff; }
+
+.line {
+  color: #ffffff;
+  height: 1px;
+  width: 7.5rem;
+  text-align: center;
+  opacity: 1; }
+
+.collection__new-collection__line {
+  margin: 1.8rem auto; }
+
+.main-btn {
+  font-family: "PTSans";
+  height: 3rem;
+  color: #ffffff;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  text-transform: uppercase;
+  margin: 0 auto; }
+
+.collection__new-collection__btn {
+  width: 8.5rem; }
+
+.main-btn:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #ffffff; }
+
+.collection__new-season__col {
+  padding: 5.8rem 0; }
+
+.collection__new-season__header {
+  font-family: 'PlayfairDisplay', serif;
+  font-size: 2.25rem;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center; }
+
+.collection__new-season__line {
+  margin: 3.1rem auto; }
+
+.new-season__goods__container {
+  padding: 0 0 0 5rem; }
+
+.new-season__goods__row {
+  margin: 0; }
+
+@media (max-width: 1399.98px) {
+  .new-season__goods__container {
+    padding: 0; } }
+
+.new-season__goods__item-wrapper {
+  background-color: #191b1c;
+  display: flex;
+  justify-content: center; }
+
+.new-season__goods__item__img {
+  width: 13.4rem;
+  height: 13.4rem;
+  margin: 3.4rem auto; }
+
+.new-season__goods__item__name {
+  margin-bottom: 0.6rem; }
+
+.new-season__goods__item__price {
+  margin: 0; }
+
+.collection__2018-collection__col {
+  padding: 0 5rem 0 0;
+  min-height: 45rem; }
+
+.collection__2018-collection__description {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 45rem; }
+
+@media (max-width: 1399.98px) {
+  .collection__2018-collection__col {
+    padding: 0; } }
+
+.collection__2018-collection__img {
+  background-image: url(img/img_4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000000;
+  background-position: center top;
+  width: 100%;
+  height: 100%; }
+
+.collection__2018-collection__header {
+  font-size: 2.25rem;
+  line-height: 3rem;
+  text-transform: uppercase; }
+
+.collection__2018-collection__info {
+  font-family: "PTSans";
+  font-size: 0.875rem;
+  line-height: 1.3rem;
+  margin: 0 30% 3.75rem 30%;
+  text-align: center; }
+
+@media (max-width: 1199.98px) {
+  .collection__2018-collection__info {
+    margin: 0 5% 3.75rem 5%; } }
+
+.collection__2018-collection__btn {
+  width: 19rem; }
