--- a/src/assets/index.pug
+++ b/src/assets/index.pug
@@ -2,12 +2,68 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    h1.row.index-row
-        |Lol
+    div.container-fluid.main-img__container
+        div.row.main-img__row
+            div.col-12.main-img__col.d-flex.justify-content-center.align-items-center.flex-column
+                div.main-img__logo
+                    img.main-img__logo-img(src="img/logo.png")
+                div.main-img__logo-description
+                    |Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
+    div.container-fluid.collection__container
+        div.row.collection-new__row
+            div.col-12.col-xl-6.collection__new-season__col
+                div.collection__new-season__header
+                    |СЕЗОН 2020/21
+                hr.collection__new-season__line.line
+                div.container-fluid.new-season__goods__container
+                    div.row.new-season__goods__row.justify-content-between
+                        div.col-xl-4.col-lg-6.new-season__goods__col-item
+                            div.new-season__goods__item-wrapper
+                                img.new-season__goods__item__img(src="img/img_3.png")
+                            p.new-season__goods__item__name
+                                |Louis XVI ATHOS
+                            p.new-season__goods__item__price
+                                |165 000 руб.
+                        div.col-xl-4.col-lg-6.new-season__goods__col-item
+                            div.new-season__goods__item-wrapper
+                                img.new-season__goods__item__img(src="img/img_3.png")
+                            p.new-season__goods__item__name
+                                |Louis XVI ATHOS
+                            p.new-season__goods__item__price
+                                |165 000 руб.
+                        div.col-xl-4.col-lg-6.new-season__goods__col-item
+                            div.new-season__goods__item-wrapper
+                                img.new-season__goods__item__img(src="img/img_3.png")
+                            p.new-season__goods__item__name
+                                |Louis XVI ATHOS
+                            p.new-season__goods__item__price
+                                |165 000 руб.
+            div.col-12.col-xl-6.collection__new-collection__col
+                div.collection__new-collection__img
+                    div.collection__new-collection__header
+                        |Новая коллекция
+                    hr.collection__new-collection__line.line
+                    button.collection__new-collection__btn.main-btn
+                        |Каталог
+    div.container-fluid.collection__container
+        div.row.collection-new__row
+            div.col-12.col-xl-6.collection__2018-collection__col
+                div.collection__2018-collection__img
+            div.col-12.col-xl-6.collection__2018-collection__description
+                div.collection__2018-collection__header
+                    |Коллекция 2018
+                hr.collection__new-collection__line.line
+                div.collection__2018-collection__info
+                    |Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
+                button.collection__2018-collection__btn.main-btn
+                    |Посмотреть коллекцию
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 </body>
 </html>
