add new arrivals and small fixes in other sections

--- a/src/assets/index.pug
+++ b/src/assets/index.pug
@@ -124,6 +124,71 @@
                     |Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
                 button.collection__2018-collection__btn.main-btn
                     |Посмотреть коллекцию
+    div.container-fluid.new-arrivals__container
+        div.row.new-arrivals__row.min-row
+            div.new-arrivals__header.main_header
+                |Новые поступления
+            hr.new-arrivals__line.line
+            div.container-fluid.new-arrivals-items__container
+                div.row.new-arrivals-items__row
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+                    div.col-xl-3.col-lg-4.col-md-6.col-12.new-arrivals-item__col
+                        div.new-season__goods__item-wrapper
+                            img.new-season__goods__item__img(src="img/img_3.png")
+                        p.new-season__goods__item__name
+                            |Louis XVI ATHOS
+                        p.new-season__goods__item__price
+                            |165 000 руб.
+
+
     div.container-fluid.brends__container.d-flex.align-items-center
         div.row.brends__row.w-100
             div.col-12.brends__col
