--- a/public/main.css
+++ b/public/main.css
@@ -17,14 +17,8 @@ body {
   background-color: #000000;
   color: #ffffff; }
 
-.container {
-  border: 2px solid aquamarine; }
-
-.row {
-  border: 2px solid plum; }
-
-[class^="col"] {
-  border: 2px solid brown; }
+.main-img__container {
+  padding: 0; }
 
 .main-img__col {
   background-image: url(img/img_1.jpg);
@@ -107,7 +101,7 @@ body {
   color: #ffffff; }
 
 .collection__new-season__col {
-  padding: 5.8rem 0; }
+  padding: 5.8rem 0 3rem; }
 
 .collection__new-season__line {
   margin: 3.1rem auto; }
@@ -133,10 +127,20 @@ body {
   margin: 3.4rem auto; }
 
 .new-season__goods__item__name {
-  margin-bottom: 0.6rem; }
+  font-family: "PlayfairDisplay";
+  font-size: 1.125rem;
+  font-weight: 400;
+  margin-bottom: 0.6rem;
+  margin-top: 1.5rem; }
 
 .new-season__goods__item__price {
-  margin: 0; }
+  font-family: "PlayfairDisplay";
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 2.5rem; }
+
+.collection__container {
+  padding: 0; }
 
 .collection__2018-collection__col {
   padding: 0 5rem 0 0;
@@ -181,6 +185,7 @@ body {
   width: 19rem; }
 
 .brends__container {
+  background-color: #0F0F0F;
   padding: 0;
   min-height: 20rem; }
 
@@ -192,6 +197,9 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding: 0; }
+
+.brends__imgs__container {
   padding: 0; }
 
 .brends__line {
@@ -207,6 +215,9 @@ body {
     max-width: 15.9rem;
     max-height: 5.8rem; }
 
+.header__container {
+  padding: 0; }
+
 .header__contacts-info {
   color: #969696;
   font-family: "PTSans";
@@ -214,7 +225,8 @@ body {
   font-weight: 400; }
 
 .header__contacts-info__phone {
-  color: #969696; }
+  color: #969696;
+  text-decoration: none; }
 
 .header__contacts-info__phone:focus, .header__contacts-info__phone:hover {
   color: #ffffff;
@@ -258,6 +270,7 @@ body {
     padding: 0 5%; } }
 
 .menu__container-descktop {
+  padding: 0;
   background-color: #0F0F0F; }
 
 .menu__row-descktop {
@@ -286,6 +299,9 @@ body {
 
 .menu-item__shopping, .menu-item__search {
   max-width: 3rem; }
+
+.menu__container-mobile {
+  padding: 0; }
 
 @media (max-width: 991.98px) {
   .menu__container-descktop, .header__sign__col {
@@ -337,6 +353,9 @@ body {
   background-position: center top;
   min-height: 25rem;
   padding: 5rem 0;
+  margin: 0; }
+
+.footer__row {
   margin: 0; }
 
 .footer-header {
@@ -405,3 +424,19 @@ body {
 @media (max-width: 350px) {
   .footer__letters-form {
     display: block; } }
+
+.new-arrivals__container {
+  padding: 7.5rem 0 9.3rem; }
+
+.new-arrivals__row {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; }
+
+.new-arrivals__line {
+  margin: 2.5rem 0; }
+
+.new-arrivals-items__container {
+  padding: 0; }
