--- a/public/main.css
+++ b/public/main.css
@@ -20,7 +20,11 @@ body {
 .main-img__container {
   padding: 0; }
 
+.main-img__row {
+  margin: 0; }
+
 .main-img__col {
+  padding: 0;
   background-image: url(img/img_1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -84,6 +88,9 @@ body {
 .collection__new-collection__line {
   margin: 1.8rem auto; }
 
+.collection-new__row {
+  margin: 0; }
+
 .main-btn {
   font-family: "PTSans";
   height: 3rem;
@@ -140,6 +147,7 @@ body {
   margin-bottom: 2.5rem; }
 
 .collection__container {
+  margin: 0;
   padding: 0; }
 
 .collection__2018-collection__col {
@@ -209,7 +217,12 @@ body {
   min-width: 63% !important;
   margin: 0 auto !important; }
 
+.brends__imgs__row {
+  margin: 0; }
+
 .brends__imgs_col {
+  margin: 0;
+  padding: 0;
   text-align: center; }
   .brends__imgs_col img {
     max-width: 15.9rem;
@@ -217,6 +230,9 @@ body {
 
 .header__container {
   padding: 0; }
+
+.header__row {
+  margin: 0; }
 
 .header__contacts-info {
   color: #969696;
@@ -274,6 +290,7 @@ body {
   background-color: #0F0F0F; }
 
 .menu__row-descktop {
+  margin: 0;
   height: 5rem; }
 
 .menu__logo {
@@ -302,6 +319,9 @@ body {
 
 .menu__container-mobile {
   padding: 0; }
+
+.menu__row-mobile {
+  margin: 0; }
 
 @media (max-width: 991.98px) {
   .menu__container-descktop, .header__sign__col {
@@ -429,11 +449,15 @@ body {
   padding: 7.5rem 0 9.3rem; }
 
 .new-arrivals__row {
-  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center; }
+
+@media (max-width: 350px) {
+  .new-arrivals__row {
+    padding: 0; } }
 
 .new-arrivals__line {
   margin: 2.5rem 0; }
